phone css part 1

--- a/stylesheet/media_labtop_portfolio-coding.css
+++ b/stylesheet/media_labtop_portfolio-coding.css
@@ -32,9 +32,9 @@
 		margin-right: auto;
 		}
 
-	.threebythreegrid {overflow:hidden;
- width: 33%;
- border: 5px solid #ffffff;
+  .threebythreegrid {overflow:hidden;
+ 		width: 33%;
+ 		border: 5px solid #ffffff;
 	}
 
 	.portfolio_images-mobile {
@@ -822,6 +822,8 @@
 /*iphoneplus*/
 
 @media (max-width:600px) {
+	
+	
 	.imac.displaynone{
 	  display: inherit;
 	}
@@ -836,6 +838,14 @@
 	height: auto;
 	}
 
+	
+	  .threecoloumntables {
+		width:100vw;
+		margin-left: auto;
+		margin-right: auto;
+		}
+
+	
 	.portfolio_images-mobile {
 		display: inherit;
 		width: 90%;
