--- a/stylesheet/media_labtop_portfolio-coding.css
+++ b/stylesheet/media_labtop_portfolio-coding.css
@@ -81,6 +81,19 @@
 	width: 100%;
 }
 
+
+.headermred:after {
+	content: "";
+	position: absolute;
+	border: 2px solid red;
+	top: 6px;
+	left: 6px;
+	bottom: 6px;
+	right: 6px;
+	border-radius: 100%;
+}
+
+
 .carousel-inner>.item>a>img, .carousel-inner>.item>img, .img-responsive, .thumbnail a>img, .thumbnail>img
 {width: 60%; max-width: 60%;}
 
@@ -822,8 +835,8 @@
 /*iphoneplus*/
 
 @media (max-width:600px) {
-	
-	
+
+
 	.imac.displaynone{
 	  display: inherit;
 	}
@@ -838,14 +851,14 @@
 	height: auto;
 	}
 
-	
+
 	  .threecoloumntables {
 		width:100vw;
 		margin-left: auto;
 		margin-right: auto;
 		}
 
-	
+
 	.portfolio_images-mobile {
 		display: inherit;
 		width: 90%;
@@ -870,6 +883,17 @@
 
 		.headermred {
 	display: block;
+	}
+
+	.headermred:after {
+		content: "";
+		position: absolute;
+		border: 2px solid red;
+		top: 6px;
+		left: 6px;
+		bottom: 6px;
+		right: 6px;
+		border-radius: 100%;
 	}
 
 .port-heading{
