--- a/stylesheet/contact.css
+++ b/stylesheet/contact.css
@@ -6,7 +6,7 @@
 .email{
     color: white;
     font-family: 'Lato', sans-serif;
-  src: url("~/fonts/Lato-Bol.ttf");
+    src: url("~/fonts/Lato-Bol.ttf");
     text-transform: lowercase;
 	padding-top: 2%;
   }
@@ -17,10 +17,13 @@
   flex-direction: row;
   justify-content: space-around;
   vertical-align: middle;
-  width: 100%;
+  width: 30%;
   height: 100px;
-  margin-top: 75%;
+  margin-top: 5%;
+  margin-left: auto;
+  margin-right: auto;
   zoom: 75%;
+
 }
 
 
@@ -100,10 +103,10 @@ h4.facebook a:hover {
 
 .container_one.contactpage {
   background: red;
-  background: -webkit-linear-gradient(#131313, #003c5f, #33273d, #ee5d6c, #FC9C54, #f1b351); /* For Safari 5.1 to 6.0 */
-  background: -o-linear-gradient(#131313, #003c5f, #33273d, #ee5d6c, #FC9C54, #f1b351); /* For Opera 11.1 to 12.0 */
-  background: -moz-linear-gradient(#131313, #003c5f, #33273d, #ee5d6c, #FC9C54, #f1b351); /* For Firefox 3.6 to 15 */
-  background: linear-gradient(#131313, #003c5f, #33273d, #ee5d6c, #FC9C54, #f1b351); /* Standard syntax */
+  background: -webkit-linear-gradient(white, #33273d, #003c5f); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(white, #33273d, #003c5f); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(white, #33273d, #003c5f); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(white, #33273d, #003c5f); /* Standard syntax */
   animation: contactsky 20s infinite;
 }
 
