--- a/stylesheet/contact_portfolio-coding.css
+++ b/stylesheet/contact_portfolio-coding.css
@@ -40,7 +40,7 @@ h4 > a:active{
   padding: 50px 70px 20px 50px;
   opacity: 1;
   text-transform: lowercase;
-	
+
 }
 
 h4.email a{
@@ -96,8 +96,16 @@ h4.facebook a:hover {
 }
 
 .container_one.contactpage{
-  height: 65vh;
-}
+  overflow: hidden;
+  display: flex;
+  height: 15vh;
+  width: 100%;  background: red;
+  background: -webkit-linear-gradient(white, #33273d, #003c5f); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(white, #33273d, #003c5f); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(white, #33273d, #003c5f); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(white, #33273d, #003c5f); /* Standard syntax */
+    animation: contactsky 20s infinite;
+  }
 
 .totop {
 	 padding: 5px 3px;
@@ -111,7 +119,7 @@ h4.facebook a:hover {
     position: fixed;
     z-index: 8000;
     /*text-shadow: 0 0 3px black; */
-	display:inherit;	
+	display:inherit;
     border-radius:50%;
     transition: all 1s;
 	bottom:7%;
