--- a/stylesheet/media_labtop.css
+++ b/stylesheet/media_labtop.css
@@ -182,7 +182,18 @@
 }
 
 
-.resume_prompt{
+p.resume-prompt{
+  margin-left: 1px;
+  color: gray;
+  font-family: 'Lato', serif;
+  font-size: 12pt;
+  letter-spacing: .1em;
+  line-height: 2;
+  opacity: 1;
+  padding-left: 2%;
+  margin-top: 3%;
+  margin-bottom:2%;
+  text-align: left;
 }
 
 .img_labtop{
