--- a/stylesheet/media_labtop_portfolio-coding.css
+++ b/stylesheet/media_labtop_portfolio-coding.css
@@ -25,6 +25,22 @@
 	margin-right: auto;
 	}
 
+	p.resume-prompt{
+		margin-left: 1px;
+  color: gray;
+  font-family: 'Lato', serif;
+  font-size: 11pt;
+  letter-spacing: .1em;
+  line-height: 2;
+  opacity: 1;
+  padding-left: 5%;
+  margin-top: 3%;
+  margin-bottom:2%;
+  text-align: left;
+
+	}
+
+
 
   .threecoloumntables {
 		width:850px;
@@ -36,6 +52,11 @@
  		width: 33%;
  		border: 5px solid #ffffff;
 	}
+
+.threebythreegrid.hamburger{
+	width:5vw;
+}
+
 
 	.portfolio_images-mobile {
 		display: none;
@@ -79,6 +100,7 @@
 .headermred {
 	display: block;
 	width: 100%;
+	outline: 2px solid #dcdcdc; outline-offset: 6px;
 }
 
 
@@ -860,6 +882,26 @@
 	  display: inherit;
 	}
 
+	p.resume-prompt{
+		margin-left: 1px;
+  color: gray;
+  font-family: 'Lato', serif;
+  font-size: 9pt;
+  letter-spacing: .1em;
+  line-height: 1.5;
+  opacity: 1;
+  padding-left: 10%;
+  margin-top: 10%;
+  margin-bottom:2%;
+  text-align: left;
+
+	}
+
+	.threebythreegrid.hamburger{
+		width:50vw;
+	}
+
+
 	.ipad.displaynone{
 		display: none;
 	}
@@ -902,6 +944,7 @@
 
 		.headermred {
 	display: block;
+	outline: none;
 	}
 
 	.headermred:after {
@@ -1116,6 +1159,7 @@ div.img_relative.labtop{
     vertical-align: middle;
     height: 15vh;
     width: 70%;
+		zoom: 90%
 
 }
 
