fixed portofolio header middle column for phone view

--- a/stylesheet/media_labtop_portfolio-coding.css
+++ b/stylesheet/media_labtop_portfolio-coding.css
@@ -891,6 +891,7 @@
   line-height: 1.5;
   opacity: 1;
   padding-left: 10%;
+	padding-right: 10%;
   margin-top: 10%;
   margin-bottom:2%;
   text-align: left;
