--- a/stylesheet/media_labtop_portfolio-coding.css
+++ b/stylesheet/media_labtop_portfolio-coding.css
@@ -895,7 +895,15 @@
   margin-top: 10%;
   margin-bottom:2%;
   text-align: left;
+	}
 
+	img.portfolio_images_pop {
+	display: block;
+	width: 100vw;
+	height: auto;
+	padding-top: 2%;
+	margin-left: auto;
+	margin-right: auto;
 	}
 
 	.threebythreegrid.hamburger{
