--- a/stylesheet/threegridpopup.css
+++ b/stylesheet/threegridpopup.css
@@ -1,6 +1,7 @@
 @media (max-width:5480px){
 
 
+
   .textforpopup {
     width: 700px;
     margin: auto;
@@ -28,7 +29,7 @@
     color: #fff;
     text-align: center;
     border-radius: 6px;
-    padding: 8px 0;
+    padding: 8px;
     position: absolute;
     z-index: 1000;
   	overflow: visible;
