--- a/stylesheet/nut.css
+++ b/stylesheet/nut.css
@@ -33,13 +33,13 @@
 	width: 70%;
 	height: auto;
   box-shadow: 6px 6px 6px lightgrey;
-  -webkit-transform:scale(1); /* Safari and Chrome */
-  -moz-transform:scale(1); /* Firefox */
-  -ms-transform:scale(1); /* IE 9 */
-  -o-transform:scale(1); /* Opera */
-   transform:scale(1);
-   transition: transform .3s;
-  transition-timing-function: ease-in-out;
+/*  -webkit-transform:scale(1); /* Safari and Chrome */
+/*  -moz-transform:scale(1); /* Firefox */
+/*  -ms-transform:scale(1); /* IE 9 */
+/*  -o-transform:scale(1); /* Opera */
+/*   transform:scale(1); */
+/*   transition: transform .3s; */
+/*  transition-timing-function: ease-in-out;*/
 }
 
 div.img_relative.labtop{
