--- a/stylesheet/media_labtop.css
+++ b/stylesheet/media_labtop.css
@@ -143,10 +143,14 @@
     transform: skewX(-30deg) rotate(-60deg) translate(-1.25em);
   }
 
+  
+
   img.resume_pdf{
     display: inline-block;
     position: relative;
-    transform: rotateY(180deg) rotateX(180deg);
+    top: -50vh;
+    opacity: 0;
+    transform: rotateX(180deg) rotateY(180deg);
     animation: rotateab 1s linear infinite;
     animation-play-state: paused;
     animation-delay: calc(var(--scroll) * -1s);
@@ -155,8 +159,41 @@
   }
 
   @keyframes rotateab {
-    to {
-      transform: rotateY(0deg) rotateY(0deg);
+    0% {
+      -webkit-transform: rotateY(180deg) rotateX(180deg);
+      -moz-transform: rotateY(180deg) rotateX(180deg);
+      -ms-transform: rotateY(180deg) rotateX(180deg);
+      -o-transform: rotateY(180deg) rotateX(180deg);
+      transform: rotateY(180deg) rotateX(180deg);
+      width: 100%;
+      top: -50vh;
+      opacity: 0;
+    }
+    50% {
+      -webkit-transform: rotateY(90deg) rotateX(90deg);
+      -moz-transform: rotateY(90deg) rotateX(90deg);
+      -ms-transform: rotateY(90deg) rotateX(90deg);
+      -o-transform: rotateY(90deg) rotateX(90deg);
+      transform: rotateY(90deg) rotateX(90deg);
+      width: 80%;
+      top: -25vh;
+      opacity: 0;
+    }
+    98% {
+      -webkit-transform: rotateY(0deg) rotateX(0deg);
+      -moz-transform: rotateY(0deg) rotateX(0deg);
+      -ms-transform: rotateY(0deg) rotateX(0deg);
+      -o-transform: rotateY(0deg) rotateX(0deg);
+      transform: rotateY(0deg) rotateX(0deg);
+      width: 60%;
+      top: 8vh;
+      opacity: 1;
+    }
+    100% {
+      transform: rotateY(0deg) rotateX(0deg);
+      width: 60%;
+      top: 8vh;
+      opacity: 1;
     }
   }
 
