--- a/stylesheet/media_labtop.css
+++ b/stylesheet/media_labtop.css
@@ -143,14 +143,56 @@
     transform: skewX(-30deg) rotate(-60deg) translate(-1.25em);
   }
 
-  
+
+p.resume-prompt {
+  display: inline-block;
+  position: relative;
+  transform: scale(1.2);
+  top: -6vh;
+  opacity: 1;
+  color: #666666;
+  animation: resumepromptcv 1s linear infinite;
+  animation-play-state: paused;
+  animation-delay: calc(var(--scroll) * -1s);
+  animation-iteration-count: 1;
+  animation-fill-mode: both;
+}
+@keyframes resumepromptcv {
+  0% {
+    top: -6vh;
+    color: #666666;
+    opacity: 1;
+    transform: scale(1.2);
+  }
+
+  40% {
+    top: -4vh;
+    opacity: 1;
+    transform: scale(1.2);
+    color: #666666;
+  }
+
+  55% {
+    top: 1vh;
+    opacity: 0;
+    transform: scale(1.1);
+    color: blue;
+  }
+  100% {
+    top: 1vh;
+    opacity: 0;
+    transform: scale(1);
+  }
+}
+
+
 
   img.resume_pdf{
     display: inline-block;
     position: relative;
     top: -50vh;
     opacity: 0;
-    transform: rotateX(180deg) rotateY(180deg);
+  /*  transform: rotateX(180deg) rotateY(180deg); */
     animation: rotateab 1s linear infinite;
     animation-play-state: paused;
     animation-delay: calc(var(--scroll) * -1s);
@@ -160,37 +202,37 @@
 
   @keyframes rotateab {
     0% {
-      -webkit-transform: rotateY(180deg) rotateX(180deg);
+/*      -webkit-transform: rotateY(180deg) rotateX(180deg);
       -moz-transform: rotateY(180deg) rotateX(180deg);
       -ms-transform: rotateY(180deg) rotateX(180deg);
       -o-transform: rotateY(180deg) rotateX(180deg);
-      transform: rotateY(180deg) rotateX(180deg);
+      transform: rotateY(180deg) rotateX(180deg);*/
       width: 100%;
       top: -50vh;
       opacity: 0;
     }
     50% {
-      -webkit-transform: rotateY(90deg) rotateX(90deg);
+  /*    -webkit-transform: rotateY(90deg) rotateX(90deg);
       -moz-transform: rotateY(90deg) rotateX(90deg);
       -ms-transform: rotateY(90deg) rotateX(90deg);
       -o-transform: rotateY(90deg) rotateX(90deg);
-      transform: rotateY(90deg) rotateX(90deg);
+      transform: rotateY(90deg) rotateX(90deg);*/
       width: 80%;
       top: -25vh;
       opacity: 0;
     }
     98% {
-      -webkit-transform: rotateY(0deg) rotateX(0deg);
+    /*  -webkit-transform: rotateY(0deg) rotateX(0deg);
       -moz-transform: rotateY(0deg) rotateX(0deg);
       -ms-transform: rotateY(0deg) rotateX(0deg);
       -o-transform: rotateY(0deg) rotateX(0deg);
-      transform: rotateY(0deg) rotateX(0deg);
+      transform: rotateY(0deg) rotateX(0deg);*/
       width: 60%;
       top: 8vh;
       opacity: 1;
     }
     100% {
-      transform: rotateY(0deg) rotateX(0deg);
+    /*  transform: rotateY(0deg) rotateX(0deg);*/
       width: 60%;
       top: 8vh;
       opacity: 1;
@@ -630,6 +672,62 @@ p.resume-prompt{
 
 @media (max-width:500px){
 
+  img.resume_pdf{
+    display: inline-block;
+    position: relative;
+    top: -25vh;
+    opacity: 0;
+/*    transform: rotateX(180deg) rotateY(180deg);*/
+    animation: rotateab 1s linear infinite;
+    animation-play-state: paused;
+    animation-delay: calc(var(--scroll) * -1s);
+    animation-iteration-count: 1;
+    animation-fill-mode: both;
+  }
+
+  @keyframes rotateab {
+    0% {
+/*      -webkit-transform: rotateY(180deg) rotateX(180deg);
+      -moz-transform: rotateY(180deg) rotateX(180deg);
+      -ms-transform: rotateY(180deg) rotateX(180deg);
+      -o-transform: rotateY(180deg) rotateX(180deg);
+      transform: rotateY(180deg) rotateX(180deg);*/
+      width: 40%;
+      top: -25vh;
+      opacity: 0;
+    }
+    50% {
+  /*    -webkit-transform: rotateY(90deg) rotateX(90deg);
+      -moz-transform: rotateY(90deg) rotateX(90deg);
+      -ms-transform: rotateY(90deg) rotateX(90deg);
+      -o-transform: rotateY(90deg) rotateX(90deg);
+      transform: rotateY(90deg) rotateX(90deg);*/
+      width: 60%;
+      top: -25vh;
+      opacity: 0;
+    }
+    98% {
+  /*    -webkit-transform: rotateY(0deg) rotateX(0deg);
+      -moz-transform: rotateY(0deg) rotateX(0deg);
+      -ms-transform: rotateY(0deg) rotateX(0deg);
+      -o-transform: rotateY(0deg) rotateX(0deg);
+      transform: rotateY(0deg) rotateX(0deg);*/
+      width: 80%;
+      top: 8vh;
+      opacity: 1;
+    }
+    100% {
+  /*    -webkit-transform: rotateY(0deg) rotateX(0deg);
+      -moz-transform: rotateY(0deg) rotateX(0deg);
+      -ms-transform: rotateY(0deg) rotateX(0deg);
+      -o-transform: rotateY(0deg) rotateX(0deg);
+      transform: rotateY(0deg) rotateX(0deg);*/
+      width: 80%;
+      top: 8vh;
+      opacity: 1;
+    }
+  }
+
 .container_one.intro{
 	position: relative;
     display: flex;
@@ -650,8 +748,6 @@ p.resume-prompt{
     border-right: 5px solid #111111;
     border-bottom: 5px solid #555555;
   }
-
-
 
 .container_two{
     position: relative;
