--- a/stylesheet/media_labtop.css
+++ b/stylesheet/media_labtop.css
@@ -162,12 +162,20 @@ p.resume-prompt {
     top: -6vh;
     color: #666666;
     opacity: 1;
+    -webkit-ransform: scale(1.2);
+    -moz-transform: scale(1.2);
+    -ms-transform: scale(1.2);
+    -o-transform: scale(1.2);
     transform: scale(1.2);
   }
 
   40% {
     top: -4vh;
     opacity: 1;
+    -webkit-ransform: scale(1.2);
+    -moz-transform: scale(1.2);
+    -ms-transform: scale(1.2);
+    -o-transform: scale(1.2);
     transform: scale(1.2);
     color: #666666;
   }
@@ -175,16 +183,23 @@ p.resume-prompt {
   55% {
     top: 1vh;
     opacity: 0;
+    -webkit-ransform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    -o-transform: scale(1.1);
     transform: scale(1.1);
     color: blue;
   }
   100% {
     top: 1vh;
     opacity: 0;
+    -webkit-ransform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
     transform: scale(1);
   }
 }
-
 
 
   img.resume_pdf{
@@ -672,6 +687,63 @@ p.resume-prompt{
 
 @media (max-width:500px){
 
+  p.resume-prompt {
+    display: inline-block;
+    position: relative;
+    transform: scale(1.2);
+    top: -6vh;
+    opacity: 1;
+    color: #666666;
+    animation: resumepromptcv 1s linear infinite;
+    animation-play-state: paused;
+    animation-delay: calc(var(--scroll) * -1s);
+    animation-iteration-count: 1;
+    animation-fill-mode: both;
+  }
+  @keyframes resumepromptcv {
+    0% {
+      top: -6vh;
+      color: #666666;
+      opacity: 1;
+      -webkit-ransform: scale(1.2);
+      -moz-transform: scale(1.2);
+      -ms-transform: scale(1.2);
+      -o-transform: scale(1.2);
+      transform: scale(1.2);
+    }
+
+    40% {
+      top: -4vh;
+      opacity: 1;
+      -webkit-ransform: scale(1.2);
+      -moz-transform: scale(1.2);
+      -ms-transform: scale(1.2);
+      -o-transform: scale(1.2);
+      transform: scale(1.2);
+      color: #666666;
+    }
+
+    55% {
+      top: 1vh;
+      opacity: 0;
+      -webkit-ransform: scale(1.1);
+      -moz-transform: scale(1.1);
+      -ms-transform: scale(1.1);
+      -o-transform: scale(1.1);
+      transform: scale(1.1);
+      color: blue;
+    }
+    100% {
+      top: 1vh;
+      opacity: 0;
+      -webkit-ransform: scale(1);
+      -moz-transform: scale(1);
+      -ms-transform: scale(1);
+      -o-transform: scale(1);
+      transform: scale(1);
+    }
+  }
+
   img.resume_pdf{
     display: inline-block;
     position: relative;
@@ -712,7 +784,7 @@ p.resume-prompt{
       -ms-transform: rotateY(0deg) rotateX(0deg);
       -o-transform: rotateY(0deg) rotateX(0deg);
       transform: rotateY(0deg) rotateX(0deg);*/
-      width: 80%;
+      width: 90%;
       top: 8vh;
       opacity: 1;
     }
@@ -722,7 +794,7 @@ p.resume-prompt{
       -ms-transform: rotateY(0deg) rotateX(0deg);
       -o-transform: rotateY(0deg) rotateX(0deg);
       transform: rotateY(0deg) rotateX(0deg);*/
-      width: 80%;
+      width: 90%;
       top: 8vh;
       opacity: 1;
     }
