--- a/stylesheet/media_labtop_portfolio-coding.css
+++ b/stylesheet/media_labtop_portfolio-coding.css
@@ -26,8 +26,8 @@
 
 	img.portfolio_images_pop {
 	display: block;
-	width: auto;
-	height: 550px;
+	width: 550px;
+	height: auto;
 	padding-top: 2%;
 	margin-left: auto;
 	margin-right: auto;
@@ -51,7 +51,7 @@
 
 
   .threecoloumntables {
-		width:850px;
+		width:650px;
 		margin-left: auto;
 		margin-right: auto;
 		}
