--- a/stylesheet/threegridpopup.css
+++ b/stylesheet/threegridpopup.css
@@ -1,12 +1,27 @@
 @media (max-width:5480px){
 
-
+  .titleforpopup {
+    width: 525px;
+    margin: auto;
+    padding: 10px 1px;
+    font-family: lato;
+    font-size: 12pt;
+    font-weight: bold;
+    text-align: left;
+    text-decoration: underline;
+    text-underline-offset: 13px;
+    line-height: 1.25;
+  }
 
   .textforpopup {
-    width: 700px;
+    width: 525px;
     margin: auto;
-    padding: 25px 5px;
+    padding: 10px 1px;
     font-family: lato;
+    font-size: 11pt;
+    text-align: left;
+    line-height: 1.25;
+
   }
 
   /* pop up starts */
@@ -55,7 +70,7 @@
     animation: fadeIn 1s;
   	z-index: 100;
   	width: 850px;
-  	height: 650px;
+  	height: 750px;
   	position: fixed;
   	margin: auto;
   	opacity: 1;
@@ -120,7 +135,7 @@
     animation: fadeIn 1s;
   	z-index: 100;
   	width: 850px;
-  	height: 650px;
+  	height: 750px;
   	position: fixed;
   	margin: auto;
   	opacity: 1;
@@ -185,7 +200,7 @@
     animation: fadeInthree 1s;
   	z-index: 100;
   	width: 850px;
-  	height: 650px;
+  	height: 750px;
   	position: fixed;
   	margin: auto;
   	opacity: 1;
@@ -251,7 +266,7 @@
     animation: fadeInfour 1s;
   	z-index: 100;
   	width: 850px;
-  	height: 650px;
+  	height: 750px;
   	position: fixed;
   	margin: auto;
   	opacity: 1;
@@ -316,7 +331,7 @@
     animation: fadeInfive 1s;
   	z-index: 100;
   	width: 850px;
-  	height: 650px;
+  	height: 750px;
   	position: fixed;
   	margin: auto;
   	opacity: 1;
@@ -381,7 +396,7 @@
     animation: fadeInsix 1s;
   	z-index: 100;
   	width: 850px;
-  	height: 650px;
+  	height: 750px;
   	position: fixed;
   	margin: auto;
   	opacity: 1;
@@ -444,8 +459,7 @@
     animation: fadeInseven 1s;
     z-index: 100;
     width: 850px;
-    height: 650px;
-    position: fixed;
+    height: 750px;    position: fixed;
     margin: auto;
     opacity: 1;
     top: 50%;
@@ -509,8 +523,7 @@
     animation: fadeIn8 1s;
     z-index: 100;
     width: 850px;
-    height: 650px;
-    position: fixed;
+    height: 750px;    position: fixed;
     margin: auto;
     opacity: 1;
     top: 50%;
@@ -573,8 +586,7 @@
     animation: fadeIn9 1s;
     z-index: 100;
     width: 850px;
-    height: 650px;
-    position: fixed;
+    height: 750px;    position: fixed;
     margin: auto;
     opacity: 1;
     top: 50%;
@@ -637,8 +649,7 @@
     animation: fadeIn10 1s;
     z-index: 100;
     width: 850px;
-    height: 650px;
-    position: fixed;
+    height: 750px;    position: fixed;
     margin: auto;
     opacity: 1;
     top: 50%;
@@ -701,8 +712,7 @@
     animation: fadeIn11 1s;
     z-index: 100;
     width: 850px;
-    height: 650px;
-    position: fixed;
+    height: 750px;    position: fixed;
     margin: auto;
     opacity: 1;
     top: 50%;
@@ -765,8 +775,7 @@
     animation: fadeIn12 1s;
     z-index: 100;
     width: 850px;
-    height: 650px;
-    position: fixed;
+    height: 750px;    position: fixed;
     margin: auto;
     opacity: 1;
     top: 50%;
@@ -829,8 +838,7 @@
     animation: fadeIn13 1s;
     z-index: 100;
     width: 850px;
-    height: 650px;
-    position: fixed;
+    height: 750px;    position: fixed;
     margin: auto;
     opacity: 1;
     top: 50%;
@@ -851,6 +859,70 @@
   }
 
 
+  /* The actual popup */
+  .popup14 {
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+
+  .popup14 .popuptext14 {
+    visibility: hidden;
+    width: 50vw;
+    background-color: rgba(40, 40, 40, .9);
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 8px 0;
+    position: absolute;
+    z-index: 1000;
+    overflow: visible;
+  }
+
+  /* Popup arrow */
+  .popup14 .popuptext14::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: #555 transparent transparent transparent;
+  }
+
+  /* Toggle this class - hide and show the popup */
+  .popup14 .show14 {
+    visibility: visible;
+    -webkit-animation: fadeIn14 1s;
+    animation: fadeIn14 1s;
+    z-index: 100;
+    width: 850px;
+    height: 750px;    position: fixed;
+    margin: auto;
+    opacity: 1;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    overflow: hidden;
+  }
+
+  /* Add animation (fade in the popup) */
+  @-webkit-keyframes fadeIn14 {
+    from {opacity: 0;}
+    to {opacity: 1;}
+  }
+
+  @keyframes fadeIn14 {
+    from {opacity: 0;}
+    to {opacity:1 ;}
+  }
+
+
   @media (max-width:600px){
 
   .textforpopup {
@@ -861,6 +933,15 @@
     line-height: 1.3em;
   }
 
+  @media (max-width:600px){
+
+  .textforpopup {
+    width: 100vw;
+    margin: auto;
+    padding: 25px 2px;
+    font-family: lato;
+    line-height: 1.3em;
+  }
 
 
   /* end of popup */
