added rocket gif and more

--- a/stylesheet/threegridpopup.css
+++ b/stylesheet/threegridpopup.css
@@ -923,6 +923,70 @@
   }
 
 
+    /* The actual popup */
+    .popup15 {
+      position: relative;
+      display: inline-block;
+      cursor: pointer;
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
+    }
+
+    .popup15 .popuptext15 {
+      visibility: hidden;
+      width: 50vw;
+      background-color: rgba(40, 40, 40, .9);
+      color: #fff;
+      text-align: center;
+      border-radius: 6px;
+      padding: 8px 0;
+      position: absolute;
+      z-index: 1000;
+      overflow: visible;
+    }
+
+    /* Popup arrow */
+    .popup15 .popuptext15::after {
+      content: "";
+      position: absolute;
+      top: 100%;
+      left: 50%;
+      margin-left: -5px;
+      border-width: 5px;
+      border-style: solid;
+      border-color: #555 transparent transparent transparent;
+    }
+
+    /* Toggle this class - hide and show the popup */
+    .popup15 .show15 {
+      visibility: visible;
+      -webkit-animation: fadeIn15 1s;
+      animation: fadeIn15 1s;
+      z-index: 100;
+      width: 850px;
+      height: 750px;    position: fixed;
+      margin: auto;
+      opacity: 1;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      overflow: hidden;
+    }
+
+    /* Add animation (fade in the popup) */
+    @-webkit-keyframes fadeIn15 {
+      from {opacity: 0;}
+      to {opacity: 1;}
+    }
+
+    @keyframes fadeIn15 {
+      from {opacity: 0;}
+      to {opacity:1 ;}
+    }
+
+
   @media (max-width:600px){
 
   .textforpopup {
@@ -933,15 +997,6 @@
     line-height: 1.3em;
   }
 
-  @media (max-width:600px){
-
-  .textforpopup {
-    width: 100vw;
-    margin: auto;
-    padding: 25px 2px;
-    font-family: lato;
-    line-height: 1.3em;
-  }
 
 
   /* end of popup */
