--- a/stylesheet/media_labtop_portfolio-coding.css
+++ b/stylesheet/media_labtop_portfolio-coding.css
@@ -919,7 +919,7 @@
 	display: block;
 	width: 100vw;
 	height: auto;
-	padding-top: 2%;
+	padding: 10px 4px 5px;
 	margin-left: auto;
 	margin-right: auto;
 	}
