--- a/stylesheet/threegridpopup.css
+++ b/stylesheet/threegridpopup.css
@@ -989,11 +989,26 @@
 
   @media (max-width:600px){
 
+
+.titleforpopup {
+      width: 100vw;
+      margin: auto;
+      padding: 10px 4px;
+      font-family: lato;
+      font-size: 10.5pt;
+      font-weight: bold;
+      text-align: left;
+      text-decoration: underline;
+      text-underline-offset: 9px;
+      line-height: 1.25;
+    }
+
   .textforpopup {
     width: 100vw;
     margin: auto;
-    padding: 25px 2px;
+    padding: 8px 4px;
     font-family: lato;
+    font-size: 9.5pt;
     line-height: 1.3em;
   }
 
