--- a/stylesheet/hamburger.css
+++ b/stylesheet/hamburger.css
@@ -19,7 +19,7 @@
 	}
 	.menu__btn {
 	  position: absolute;
-	  top: 8%;
+	  top: 30%;
 	  left: 5%;
 	  width: 50px;
 	  height: 50px;
@@ -122,6 +122,8 @@
 		z-index: 8888;
 	}
 	.menu__btn {
-	  left: 6%;
+	  left: 4%;
+		position: fixed;
+		top:8%;
 	}
 }
