--- a/stylesheet/media_labtop.css
+++ b/stylesheet/media_labtop.css
@@ -14,6 +14,36 @@
 /*labtop*/
 @media (max-width:5480px){
 
+label.menu__btn {
+  position: fixed;
+  top: 8vh;
+  animation: hamburgerfade 2s linear infinite;
+  animation-play-state: paused;
+  animation-delay: calc(var(--scroll) * -1s);
+  animation-iteration-count: 1;
+  animation-fill-mode: both;
+  }
+@keyframes hamburgerfade {
+  0% {
+      opacity: 1;
+    }
+
+  20% {
+      opacity: 1;
+    }
+
+  30% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 0;
+  }
+}
+
+
+
+
   .container_one.intro{
 	  width: 80vw;
 	  height: 95vh;
