--- a/stylesheet/media_labtop.css
+++ b/stylesheet/media_labtop.css
@@ -213,17 +213,18 @@ p.resume-prompt {
   55% {
     top: 1vh;
     opacity: 0;
-    -webkit-ransform: scale(1.1);
-    -moz-transform: scale(1.1);
-    -ms-transform: scale(1.1);
-    -o-transform: scale(1.1);
-    transform: scale(1.1);
+    -webkit-ransform: scale(1.3);
+    -moz-transform: scale(1.3);
+    -ms-transform: scale(1.3);
+    -o-transform: scale(1.3);
+    transform: scale(1.3);
     color: blue;
   }
+
   100% {
     top: 1vh;
     opacity: 0;
-    -webkit-ransform: scale(1);
+    -webkit-ransform: scale();
     -moz-transform: scale(1);
     -ms-transform: scale(1);
     -o-transform: scale(1);
@@ -252,40 +253,45 @@ p.resume-prompt {
       -ms-transform: rotateY(180deg) rotateX(180deg);
       -o-transform: rotateY(180deg) rotateX(180deg);
       transform: rotateY(180deg) rotateX(180deg);*/
-      width: 100%;
-      top: -50vh;
+      width: 10%;
+      top: 50vh;
       opacity: 0;
     }
-    50% {
+    15%{
+      width: 70%;
+      top: 50vh;
+      opacity: 0;
+    }
+    20% {
   /*    -webkit-transform: rotateY(90deg) rotateX(90deg);
       -moz-transform: rotateY(90deg) rotateX(90deg);
       -ms-transform: rotateY(90deg) rotateX(90deg);
       -o-transform: rotateY(90deg) rotateX(90deg);
       transform: rotateY(90deg) rotateX(90deg);*/
       width: 80%;
-      top: -25vh;
+      top: 20vh;
       opacity: 0;
     }
 
-    65% {
-      width: 70%;
-      top: -5vh;
+    55% {
+      width: 90%;
+      top: -10vh;
       opacity: 1;
     }
 
-    98% {
+    90% {
     /*  -webkit-transform: rotateY(0deg) rotateX(0deg);
       -moz-transform: rotateY(0deg) rotateX(0deg);
       -ms-transform: rotateY(0deg) rotateX(0deg);
       -o-transform: rotateY(0deg) rotateX(0deg);
       transform: rotateY(0deg) rotateX(0deg);*/
-      width: 60%;
-      top: 8vh;
+      width: 80%;
+      top: -40vh;
       opacity: 1;
     }
     100% {
     /*  transform: rotateY(0deg) rotateX(0deg);*/
-      width: 60%;
+      width: 45%;
       top: 8vh;
       opacity: 1;
     }
@@ -298,6 +304,7 @@ p.resume-prompt {
 
   .container_nut{
     width:100%;
+    margin-top: 1px;
   }
 
   .hello{
@@ -359,7 +366,7 @@ p.resume-prompt{
   }
 
   div.img_relative.labtop{
-    width: 50%;
+    width: 65%;
     margin: auto;
     height: 75vh;
   }
@@ -473,7 +480,7 @@ p.resume-prompt{
   }
 
   div.img_relative.labtop{
-    height: 100vh;
+    height: 90vh;
     margin: auto;
   }
 
