--- a/stylesheet/media_labtop.css
+++ b/stylesheet/media_labtop.css
@@ -14,35 +14,6 @@
 /*labtop*/
 @media (max-width:5480px){
 
-label.menu__btn {
-  position: fixed;
-  top: 8vh;
-  animation: hamburgerfade 2s linear infinite;
-  animation-play-state: paused;
-  animation-delay: calc(var(--scroll) * -1s);
-  animation-iteration-count: 1;
-  animation-fill-mode: both;
-  }
-@keyframes hamburgerfade {
-  0% {
-      opacity: 1;
-    }
-
-  20% {
-      opacity: 1;
-    }
-
-  30% {
-    opacity: 0;
-  }
-
-  100% {
-    opacity: 0;
-  }
-}
-
-
-
 
   .container_one.intro{
 	  width: 80vw;
@@ -161,7 +132,7 @@ label.menu__btn {
     width: 10em;
     height: 8.66em;
     transform: rotate(60deg) skewX(30deg);
-    margin-top: -.5%;
+    margin-top: -2%;
   }
 
   .trapezoid:before {
@@ -172,6 +143,34 @@ label.menu__btn {
    height: 51%;
     transform: skewX(-30deg) rotate(-60deg) translate(-1.25em);
   }
+
+  label.menu__btn {
+    position: fixed;
+    top: 8vh;
+    animation: hamburgerfade 2s linear infinite;
+    animation-play-state: paused;
+    animation-delay: calc(var(--scroll) * -1s);
+    animation-iteration-count: 1;
+    animation-fill-mode: both;
+    }
+  @keyframes hamburgerfade {
+    0% {
+        opacity: 1;
+      }
+
+    20% {
+        opacity: 1;
+      }
+
+    30% {
+      opacity: 0;
+    }
+
+    100% {
+      opacity: 0;
+    }
+  }
+
 
 
 p.resume-prompt {
@@ -286,13 +285,13 @@ p.resume-prompt {
       -o-transform: rotateY(0deg) rotateX(0deg);
       transform: rotateY(0deg) rotateX(0deg);*/
       width: 80%;
-      top: -40vh;
+      top: -50vh;
       opacity: 1;
     }
     100% {
     /*  transform: rotateY(0deg) rotateX(0deg);*/
       width: 45%;
-      top: 8vh;
+      top: -10vh;
       opacity: 1;
     }
   }
@@ -366,7 +365,7 @@ p.resume-prompt{
   }
 
   div.img_relative.labtop{
-    width: 65%;
+    width: 50%;
     margin: auto;
     height: 75vh;
   }
@@ -450,6 +449,178 @@ p.resume-prompt{
 /*ipad laptops*/
 
 @media (max-width:2024px){
+
+  .trapezoid {
+    display: inline-block;
+    overflow: hidden;
+    margin: 0 3em;
+    /**outline: solid 1px;/**/
+    width: 10em;
+    height: 8.66em;
+    transform: rotate(60deg) skewX(30deg);
+    margin-top: -.5%;
+  }
+
+  .trapezoid:before {
+    display: block;
+    background: linear-gradient(#efefef, #666666, #aaaaaa, #dcdcdc);
+    content: '';
+   width: 103%;
+   height: 51%;
+    transform: skewX(-30deg) rotate(-60deg) translate(-1.25em);
+  }
+
+  label.menu__btn {
+    position: fixed;
+    top: 8vh;
+    animation: hamburgerfade 2s linear infinite;
+    animation-play-state: paused;
+    animation-delay: calc(var(--scroll) * -1s);
+    animation-iteration-count: 1;
+    animation-fill-mode: both;
+    }
+  @keyframes hamburgerfade {
+    0% {
+        opacity: 1;
+      }
+
+    20% {
+        opacity: 1;
+      }
+
+    30% {
+      opacity: 0;
+    }
+
+    100% {
+      opacity: 0;
+    }
+  }
+
+
+
+p.resume-prompt {
+  display: inline-block;
+  position: relative;
+  transform: scale(1.2);
+  top: -6vh;
+  opacity: 1;
+  color: #666666;
+  animation: resumepromptcv 1s linear infinite;
+  animation-play-state: paused;
+  animation-delay: calc(var(--scroll) * -1s);
+  animation-iteration-count: 1;
+  animation-fill-mode: both;
+}
+@keyframes resumepromptcv {
+  0% {
+    top: -6vh;
+    color: #666666;
+    opacity: 1;
+    -webkit-ransform: scale(1.2);
+    -moz-transform: scale(1.2);
+    -ms-transform: scale(1.2);
+    -o-transform: scale(1.2);
+    transform: scale(1.2);
+  }
+
+  40% {
+    top: -4vh;
+    opacity: 1;
+    -webkit-ransform: scale(1.2);
+    -moz-transform: scale(1.2);
+    -ms-transform: scale(1.2);
+    -o-transform: scale(1.2);
+    transform: scale(1.2);
+    color: #666666;
+  }
+
+  55% {
+    top: 1vh;
+    opacity: 0;
+    -webkit-ransform: scale(1.3);
+    -moz-transform: scale(1.3);
+    -ms-transform: scale(1.3);
+    -o-transform: scale(1.3);
+    transform: scale(1.3);
+    color: blue;
+  }
+
+  100% {
+    top: 1vh;
+    opacity: 0;
+    -webkit-ransform: scale();
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+    transform: scale(1);
+  }
+}
+
+
+  img.resume_pdf{
+    display: inline-block;
+    position: relative;
+    top: -50vh;
+    opacity: 0;
+  /*  transform: rotateX(180deg) rotateY(180deg); */
+    animation: rotateab 1s linear infinite;
+    animation-play-state: paused;
+    animation-delay: calc(var(--scroll) * -1s);
+    animation-iteration-count: 1;
+    animation-fill-mode: both;
+  }
+
+  @keyframes rotateab {
+    0% {
+/*      -webkit-transform: rotateY(180deg) rotateX(180deg);
+      -moz-transform: rotateY(180deg) rotateX(180deg);
+      -ms-transform: rotateY(180deg) rotateX(180deg);
+      -o-transform: rotateY(180deg) rotateX(180deg);
+      transform: rotateY(180deg) rotateX(180deg);*/
+      width: 10%;
+      top: 50vh;
+      opacity: 0;
+    }
+    15%{
+      width: 70%;
+      top: 50vh;
+      opacity: 0;
+    }
+    20% {
+  /*    -webkit-transform: rotateY(90deg) rotateX(90deg);
+      -moz-transform: rotateY(90deg) rotateX(90deg);
+      -ms-transform: rotateY(90deg) rotateX(90deg);
+      -o-transform: rotateY(90deg) rotateX(90deg);
+      transform: rotateY(90deg) rotateX(90deg);*/
+      width: 80%;
+      top: 20vh;
+      opacity: 0;
+    }
+
+    55% {
+      width: 90%;
+      top: -10vh;
+      opacity: 1;
+    }
+
+    90% {
+    /*  -webkit-transform: rotateY(0deg) rotateX(0deg);
+      -moz-transform: rotateY(0deg) rotateX(0deg);
+      -ms-transform: rotateY(0deg) rotateX(0deg);
+      -o-transform: rotateY(0deg) rotateX(0deg);
+      transform: rotateY(0deg) rotateX(0deg);*/
+      width: 80%;
+      top: -30vh;
+      opacity: 1;
+    }
+    100% {
+    /*  transform: rotateY(0deg) rotateX(0deg);*/
+      width: 60%;
+      top: 8vh;
+      opacity: 1;
+    }
+  }
 
 	.row.nut {
 		width: 100%;
@@ -731,6 +902,33 @@ p.resume-prompt{
 
 @media (max-width:500px){
 
+  label.menu__btn {
+    position: fixed;
+    top: 8vh;
+    animation: hamburgerfade 2s linear infinite;
+    animation-play-state: paused;
+    animation-delay: calc(var(--scroll) * -1s);
+    animation-iteration-count: 1;
+    animation-fill-mode: both;
+    }
+  @keyframes hamburgerfade {
+    0% {
+        opacity: 1;
+      }
+
+    5% {
+        opacity: 1;
+      }
+
+    7% {
+      opacity: 0;
+    }
+
+    100% {
+      opacity: 0;
+    }
+  }
+
   p.resume-prompt {
     display: inline-block;
     position: relative;
@@ -913,14 +1111,14 @@ p.resume-prompt{
     position: absolute;
     z-index: 0;
     opacity: 1;
-    top: 20%;
-    width: 75vw;
+    top: 27%;
+    width: 50vw;
     height: auto;
     animation: cloud2 100s linear;
 	}
 
-@keyframes cloud2 {0% {left: -67vw;} 100% {left: 100vw;}}
-@-webkit-keyframes cloud2 {0% {left: -67vw;} 100% {left: 100vw;}}
+@keyframes cloud2 {0% {left: -45vw;} 100% {left: 100vw;}}
+@-webkit-keyframes cloud2 {0% {left: -45vw;} 100% {left: 100vw;}}
 
   .img_introcloud3{
     position: absolute;
@@ -933,8 +1131,8 @@ p.resume-prompt{
     animation: cloud3 500s linear;
   }
 
-@keyframes cloud3{0% {right: 0%;} 100% {right: -100vw;}}
-@-webkit-keyframes cloud3{0% {right: 0%;} 100% {right: -100vw;}}
+@keyframes cloud3{0% {right: 50vw;} 100% {right: -100vw;}}
+@-webkit-keyframes cloud3{0% {right: 50vw;} 100% {right: -100vw;}}
 
 	h1 {
     font-size: 12vw;
