--- a/stylesheet/media_labtop.css
+++ b/stylesheet/media_labtop.css
@@ -235,7 +235,9 @@ p.resume-prompt {
   img.resume_pdf{
     display: inline-block;
     position: relative;
-    top: -50vh;
+    width: 70%;
+    top: 0px;
+    height: 75%;
     opacity: 0;
   /*  transform: rotateX(180deg) rotateY(180deg); */
     animation: rotateab 1s linear infinite;
@@ -1007,27 +1009,61 @@ p.resume-prompt {
       -o-transform: rotateY(180deg) rotateX(180deg);
       transform: rotateY(180deg) rotateX(180deg);*/
       width: 40%;
+      height: auto;
       top: -15vh;
+      margin-left: 0%;
       opacity: 0;
     }
-    50% {
+
+    40% {
+/*      -webkit-transform: rotateY(180deg) rotateX(180deg);
+      -moz-transform: rotateY(180deg) rotateX(180deg);
+      -ms-transform: rotateY(180deg) rotateX(180deg);
+      -o-transform: rotateY(180deg) rotateX(180deg);
+      transform: rotateY(180deg) rotateX(180deg);*/
+      width: 40%;
+      height: auto;
+      top: -15vh;
+      margin-left: 0%;
+      opacity: 0;
+    }
+
+    60% {
   /*    -webkit-transform: rotateY(90deg) rotateX(90deg);
       -moz-transform: rotateY(90deg) rotateX(90deg);
       -ms-transform: rotateY(90deg) rotateX(90deg);
       -o-transform: rotateY(90deg) rotateX(90deg);
       transform: rotateY(90deg) rotateX(90deg);*/
-      width: 60%;
+      width: 110%;
+      height: auto;
+      margin-left: 0%;
       top: 5vh;
-      opacity: 0;
+      opacity: 1;
     }
+
+    80% {
+  /*    -webkit-transform: rotateY(90deg) rotateX(90deg);
+      -moz-transform: rotateY(90deg) rotateX(90deg);
+      -ms-transform: rotateY(90deg) rotateX(90deg);
+      -o-transform: rotateY(90deg) rotateX(90deg);
+      transform: rotateY(90deg) rotateX(90deg);*/
+      width: 110%;
+      height: auto;
+      margin-left: -10vw;
+      top: 5vh;
+      opacity: 1;
+    }
+
     98% {
   /*    -webkit-transform: rotateY(0deg) rotateX(0deg);
       -moz-transform: rotateY(0deg) rotateX(0deg);
       -ms-transform: rotateY(0deg) rotateX(0deg);
       -o-transform: rotateY(0deg) rotateX(0deg);
       transform: rotateY(0deg) rotateX(0deg);*/
-      width: 100%;
-      top: 10vh;
+      width: 110%;
+      height: auto;
+      margin-left: -25%;
+      top: 1vh;
       opacity: 1;
     }
     100% {
@@ -1037,7 +1073,8 @@ p.resume-prompt {
       -o-transform: rotateY(0deg) rotateX(0deg);
       transform: rotateY(0deg) rotateX(0deg);*/
       width: 100%;
-      top: 10vh;
+      height: auto;
+      top: 1vh;
       opacity: 1;
     }
   }
@@ -1306,6 +1343,7 @@ div.img_relative.labtop{
 
 #labtopresumewidth {
   width: 100%;
+  height: 75vh;
 		overflow: hidden;
 	}
 
